<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp"
    android:background="@drawable/sierra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/title"
            android:gravity="bottom"
            android:padding="8dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle"
            android:text="@string/subtitle"
            android:gravity="bottom"
            android:paddingLeft="8dp"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/adventure"
            android:text="@string/adventure"
            android:gravity="bottom"
            android:padding="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boost"
            android:text="@string/boost"
            android:textColor="#ffffff"
            android:paddingLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question1"
            android:text="@string/question1"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:padding="8dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_yes"
                android:text="@string/rb_yes"
                android:textColor="#ffffff"
                android:layout_margin="8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_maybe"
                android:text="@string/rb_maybe"
                android:textColor="#ffffff"
                android:layout_margin="8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_no"
                android:text="@string/rb_no"
                android:textColor="#ffffff"
                android:layout_margin="8dp"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question2"
            android:text="@string/question2"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_active"
                android:text="@string/rb_active"
                android:textColor="#ffffff"
                android:layout_margin="8dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_chillout"
                android:text="@string/rb_chillout"
                android:textColor="#ffffff"
                android:layout_margin="8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_both"
                android:text="@string/rb_both"
                android:textColor="#ffffff"
                android:layout_margin="8dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question3"
            android:text="@string/question3"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_sunbathing"
                    android:text="@string/cb_sunbathing"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_sup"
                    android:text="@string/cb_SUP"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_hiking"
                    android:text="@string/cb_hiking"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_wine_tasting"
                    android:text="@string/cb_wine_tasting"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp"/>

                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_sightseeing"
                    android:text="@string/cb_sightseeing"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_sufring"
                    android:text="@string/cb_sufring"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_hanging_around"
                    android:text="@string/cb_hanging_around"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_sleep"
                    android:text="@string/cb_sleep"
                    android:textColor="#ffffff"
                    android:layout_margin="8dp"/>
                </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question4"
            android:text="@string/question4"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:id="@+id/enter_number"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:textColorHint="#ffffff"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/submit_button"
            android:text="@string/submit_button"
            android:gravity="center"
            android:onClick="submitAnswers"/>

    </LinearLayout>
</ScrollView>